@@ -1,3 +1,8 @@
+2005-09-23 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b1
+
+ * New: If selfregister is on, then inside the login popup is a link to register.
+        This covers Patch #1042354.
+        
 2005-09-22 Chris Kelly <ckdake@users.sf.net> 1.5.1
 
 	* Release:  1.5.1
